# gocardless-osm

./: .pre-commit-config.yaml  accounting.py  pyproject.toml  requirements.txt  setup.py
.devcontainer/: devcontainer.json
app/: split_payout_data.py
gocardlessosm/: payout_processor.py  split_payout_data.py  streamlit_app.py
gocardlessosm/utils/: data_types.py
